--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -174,6 +174,12 @@ hr.small-dark {
     padding: 50px 0;
 }
 
+.gator {
+    padding: 50px 0;
+    padding-left: 50px;
+    background: #f90;
+}
+
 /* Services */
 
 .services {
