--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -177,17 +177,21 @@ hr.small-dark {
 .gator {
     padding: 50px 0;
     padding-left: 50px;
-    background: #f90;
+    background: #f80;
 }
 
 /* Services */
 
 .services {
-    padding: 50px 0;
+    padding: 50px 0 10px 0;
 }
 
 .service-item {
     margin-bottom: 30px;
+}
+
+.languages {
+    padding: 0 0 50px 0;
 }
 
 /* Callout */
@@ -224,7 +228,7 @@ hr.small-dark {
 
 /* Call to Action */
 
-.call-to-action {
+.workex{
     padding: 50px 0;
 }
 
