--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -32,7 +32,7 @@ body {
 .img-vertical-center {
     display: inline-block;
     vertical-align: middle;
-    float: none;
+    /*float: none;*/
 }
 
 /* Custom Button Styles */
