--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -174,7 +174,7 @@ hr.small-dark {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/bkg.png) no-repeat center center scroll;
+    background: url(../img/bk.png) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
